--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,11 @@
 <app-header></app-header>
 
-<div class="container">
+<div class="container border border-secondary">
   <div class="row">
-    <div class="col-md-12">
+    <div style="border: 1px solid red" class="col-sm-12 container" >
       <app-recipes></app-recipes>
       <app-shopping-list></app-shopping-list>
     </div>
   </div>
+  
 </div>
