--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 
 <div class="container border border-secondary">
   <div class="row">
-    <div style="border: 1px solid red" class="col-sm-12 container" >
+    <div class="container" >
       <app-recipes></app-recipes>
       <app-shopping-list></app-shopping-list>
     </div>
