--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
-<app-header></app-header>
+<app-header (featureEmit) = "onNavigate($event)" ></app-header>
 
 <div class="container border border-secondary">
   <div class="row">
     <div class="container" >
-      <app-recipes></app-recipes>
-      <app-shopping-list></app-shopping-list>
+      <app-recipes *ngIf="currentPage==='recipe'" ></app-recipes>
+      <app-shopping-list *ngIf="currentPage !=='recipe'"  ></app-shopping-list>
     </div>
   </div>
   
