--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,8 +1,11 @@
 <div class="row">
   <div class="col-md-5">
-    <app-recipe-list></app-recipe-list>
+    <app-recipe-list (secondRecipeEmit) = "currentRecipe = $event" ></app-recipe-list>
   </div>
   <div class="col-md-7">
-    <app-recipe-detail></app-recipe-detail>
+    <app-recipe-detail 
+    [recipe]="currentRecipe"
+    *ngIf="currentRecipe !== undefined"
+    ></app-recipe-detail>
   </div>
 </div>
