--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,23 +1,21 @@
 <div class="row">
   <div class="col-xs-12">
     <img
-    style="max-height: 200px;"
-    [src]="recipe.imagePath" 
-    alt={{recipe.name}} 
-    class="img-responsive" />
+      style="max-height: 200px"
+      [src]="recipe.imagePath"
+      alt="{{ recipe.name }}"
+      class="img-responsive"
+    />
   </div>
 </div>
 <div class="row">
   <div class="col-xs-12">
-    <h1>{{recipe.name}}</h1>
+    <h1>{{ recipe.name }}</h1>
   </div>
 </div>
 <div class="row">
   <div class="col-xs-12">
-    <div 
-    class="btn-group"
-    appDropdown
-    >
+    <div class="btn-group" appDropdown>
       <button class="btn btn-primary dropdown-toggle">
         Manage Recipe <span class="caret"></span>
       </button>
@@ -30,9 +28,18 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-xs-12">{{recipe.description}}</div>
+  <div class="col-xs-12">{{ recipe.description }}</div>
 </div>
 
 <div class="row">
-  <div class="col-xs-12">Ingredients</div>
+  <div class="col-xs-12">
+    <ul class="list-group">
+      <li 
+      class="list-group-item"
+      *ngFor="let ingredient of recipe.ingredients"
+      >
+      {{ingredient.name}} - {{ingredient.amount}}
+      </li>
+  </ul>
+</div>
 </div>
