--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,17 +12,17 @@
     </div>
     <div class="navbar-collapse" [class.collapse]="collapsed" (window:resize)="collapsed = true">
       <ul class="nav navbar-nav">
-        <li (click)="onSelect('recipe')" ><a href="#">Recipes</a></li>
-        <li (click)="onSelect('shopping-list')" ><a href="#">Shopping List</a></li>
+        <li routerLinkActive="active" ><a routerLink="/recipes">Recipes</a></li>
+        <li routerLinkActive="active" ><a routerLink="/shopping-list">Shopping List</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li appDropdown class="dropdown">
-          <a role="button" href="#" class="dropdown-toggle"
+          <a role="button" style="cursor: pointer;" class="dropdown-toggle"
             >Manage <span class="caret"></span>
           </a>
           <ul class="dropdown-menu">
-            <li><a href="#">Save Data</a></li>
-            <li><a href="#">Fetch Data</a></li>
+            <li><a style="cursor: pointer;">Save Data</a></li>
+            <li><a style="cursor: pointer;">Fetch Data</a></li>
           </ul>
         </li>
       </ul>
