--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div style="cursor: pointer;" class="row">
   <div class="col-xs-10">
     <app-shoping-edit (updateIngredient)="onUpdateIngredient($event)" ></app-shoping-edit>
     <hr>
