--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,3 +1,5 @@
+
+<div *ngIf="recipe !== undefined "  class="col-xs">
 <div class="row">
   <div class="col-xs-12">
     <img
@@ -42,4 +44,6 @@
       </li>
   </ul>
 </div>
+</div>
+
 </div>
