--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -3,9 +3,10 @@
     <app-recipe-list ></app-recipe-list>
   </div>
   <div class="col-md-7">
-    <app-recipe-detail 
+    <!-- <app-recipe-detail 
     [recipe]="currentRecipe"
     *ngIf="currentRecipe !== undefined"
-    ></app-recipe-detail>
+    ></app-recipe-detail> -->
+    <router-outlet></router-outlet>
   </div>
 </div>
