--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -22,9 +22,9 @@
         Manage Recipe <span class="caret"></span>
       </button>
       <ul class="dropdown-menu">
-        <li (click)="onToShoppingList(recipe.ingredients)" ><a >To Shopping List</a></li>
-        <li><a href="#">Edit Recipe</a></li>
-        <li><a href="#">Delete Recipe</a></li>
+        <li style="cursor: pointer;" (click)="onToShoppingList(recipe.ingredients)" ><a >To Shopping List</a></li>
+        <li style="cursor: pointer;" ><a (click)="onEditRecipe()" >Edit Recipe</a></li>
+        <li style="cursor: pointer;" ><a (click)="onDeleteRecipe()">Delete Recipe</a></li>
       </ul>
     </div>
   </div>
