--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-header (featureEmit) = "onNavigate($event)" ></app-header>
+<app-header ></app-header>
 
 <div class="container border border-secondary">
   <div class="row">
