--- a/src/app/shopping-list/shoping-edit/shoping-edit.component.html
+++ b/src/app/shopping-list/shoping-edit/shoping-edit.component.html
@@ -1,19 +1,19 @@
 <div class="row">
   <div class="col-xs-12 form-group">
-    <form>
+    <form (ngSubmit)="onAdd(f)" #f="ngForm">
       <div class="row">
         <div class="col-sm-5">
           <label for="name">Name</label>
-          <input #nameRef type="text" id="name" class="form-control" />
+          <input name='name' ngModel type="text" id="name" class="form-control" />
         </div>
         <div class="col-sm-2 form-group">
           <label for="amount">Amount</label>
-          <input #amountRef type="number" id="amount" class="form-control" />
+          <input name='amount' ngModel type="number" id="amount" class="form-control" />
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12">
-          <button (click)="onAdd()" class="btn btn-success" type="submit">Add</button>
+          <button  class="btn btn-success" type="submit">Add</button>
           <button class="btn btn-danger" type="button">Delete</button>
           <button class="btn btn-primary" type="button">Clear</button>
         </div>
