--- a/src/app/shopping-list/shoping-edit/shoping-edit.component.html
+++ b/src/app/shopping-list/shoping-edit/shoping-edit.component.html
@@ -4,16 +4,31 @@
       <div class="row">
         <div class="col-sm-5">
           <label for="name">Name</label>
-          <input name='name' ngModel type="text" id="name" class="form-control" />
+          <input
+            name="name"
+            ngModel
+            type="text"
+            id="name"
+            class="form-control"
+            required
+          />
         </div>
         <div class="col-sm-2 form-group">
           <label for="amount">Amount</label>
-          <input name='amount' ngModel type="number" id="amount" class="form-control" />
+          <input
+            name="amount"
+            ngModel
+            type="number"
+            id="amount"
+            class="form-control"
+            required
+            pattern="^[1-9]+[0-9]*$"
+          />
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12">
-          <button  class="btn btn-success" type="submit">Add</button>
+          <button [disabled]='!f.valid' class="btn btn-success" type="submit">{{ editMode ? "Update": "Add"}}</button>
           <button class="btn btn-danger" type="button">Delete</button>
           <button class="btn btn-primary" type="button">Clear</button>
         </div>
