--- a/src/app/shopping-list/shoping-edit/shoping-edit.component.html
+++ b/src/app/shopping-list/shoping-edit/shoping-edit.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-xs-12 form-group">
-    <form (ngSubmit)="onAdd(f)" #f="ngForm">
+    <form (ngSubmit)="onSubmit(f)" #f="ngForm">
       <div class="row">
         <div class="col-sm-5">
           <label for="name">Name</label>
@@ -29,8 +29,8 @@
       <div class="row">
         <div class="col-xs-12">
           <button [disabled]='!f.valid' class="btn btn-success" type="submit">{{ editMode ? "Update": "Add"}}</button>
-          <button class="btn btn-danger" type="button">Delete</button>
-          <button class="btn btn-primary" type="button">Clear</button>
+          <button class="btn btn-primary" type="button" (click)="onClear()" >Clear</button>
+          <button *ngIf="editMode" class="btn btn-danger" type="button" (click)="onDelete()" >Delete</button>
         </div>
       </div>
     </form>
