--- a/src/app/recipes/recipe-new/recipe-new.component.html
+++ b/src/app/recipes/recipe-new/recipe-new.component.html
@@ -1,1 +1,85 @@
-<p>New Recipe done!</p>
+<div class="row mt-4">
+  <div class="col-xs-12">
+    <form [formGroup]="recipeForm" >
+      <div class="col-xs-12">
+        <div class="formg-group">
+          <button type="submit" class="btn btn-success ">Save</button>
+          <button type="button" class="btn btn-danger">Cancel</button>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="form-group">
+            <label for="name">Name</label>
+            <input 
+            name="name"
+            type="text"
+            class="form-control" 
+            formControlName="name" 
+            />
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="form-group">
+            <label for="imagePath">Image URL</label>
+            <input 
+            name="imagepath" 
+            type="text" 
+            class="form-control"
+            formControlName="imagePath"
+            />
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <img src="" alt="chosen image" class="img-responsive" />
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="form-group">
+            <label for="description">Description</label>
+            <textarea
+              name="description"
+              type="text"
+              class="form-control"
+              rows="6"
+              formControlName="description"
+            >
+            </textarea>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-xs-12" formArrayName='ingredients' >
+          <div  
+          class="row"
+          *ngFor="let ingredient of ingredientsForm; let i = index;"
+          >
+            <div class="col-xs-8">
+              <input 
+              type="text" 
+              formControlName="name" 
+              class="form-control"
+              >
+            </div>
+            <div class="col-xs-2">
+              <input 
+              type="number" 
+              class="form-control"
+              formControlName="amount"
+              >
+            </div>
+            <div class="col-xs-2">
+              <button class="btn btn-danger">X</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
