--- a/src/app/recipes/recipe-new/recipe-new.component.html
+++ b/src/app/recipes/recipe-new/recipe-new.component.html
@@ -1,9 +1,9 @@
 <div class="row mt-4">
-  <div class="col-xs-12">
+  <div class="col-xs-12" style="margin-bottom: 5rem;">
     <form [formGroup]="recipeForm" >
       <div class="col-xs-12">
         <div class="formg-group">
-          <button type="submit" class="btn btn-success ">Save</button>
+          <button [disabled]="!recipeForm.valid" type="submit" class="btn btn-success ">Save</button>
           <button type="button" class="btn btn-danger">Cancel</button>
         </div>
       </div>
@@ -54,11 +54,13 @@
         </div>
       </div>
 
-      <div class="row">
-        <div class="col-xs-12" formArrayName='ingredients' >
+      <div class="row" style="margin-top: 15px;">
+        <div class="col-xs-12" formArrayName = "ingredients" >
           <div  
           class="row"
+          style="margin-top: 10px;"
           *ngFor="let ingredient of ingredientsForm; let i = index;"
+          [formGroupName] = "i"
           >
             <div class="col-xs-8">
               <input 
@@ -78,6 +80,11 @@
               <button class="btn btn-danger">X</button>
             </div>
           </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12" style="margin-top: 7px;">
+          <button type="button" class="btn btn-primary" (click)="onAddIngredient()">Add ingredient</button>
         </div>
       </div>
     </form>
