--- a/src/app/recipes/recipe-new/recipe-new.component.html
+++ b/src/app/recipes/recipe-new/recipe-new.component.html
@@ -1,9 +1,16 @@
 <div class="row mt-4">
-  <div class="col-xs-12" style="margin-bottom: 5rem;">
-    <form [formGroup]="recipeForm" >
+  <div class="col-xs-12" style="margin-bottom: 5rem">
+    <form [formGroup]="recipeForm">
       <div class="col-xs-12">
         <div class="formg-group">
-          <button [disabled]="!recipeForm.valid" type="submit" class="btn btn-success ">Save</button>
+          <button
+          style="margin-right: 10px;"
+            [disabled]="!recipeForm.valid"
+            type="submit"
+            class="btn btn-success"
+          >
+            Save
+          </button>
           <button type="button" class="btn btn-danger">Cancel</button>
         </div>
       </div>
@@ -11,11 +18,11 @@
         <div class="col-xs-12">
           <div class="form-group">
             <label for="name">Name</label>
-            <input 
-            name="name"
-            type="text"
-            class="form-control" 
-            formControlName="name" 
+            <input
+              name="name"
+              type="text"
+              class="form-control"
+              formControlName="name"
             />
           </div>
         </div>
@@ -24,11 +31,11 @@
         <div class="col-xs-12">
           <div class="form-group">
             <label for="imagePath">Image URL</label>
-            <input 
-            name="imagepath" 
-            type="text" 
-            class="form-control"
-            formControlName="imagePath"
+            <input
+              name="imagepath"
+              type="text"
+              class="form-control"
+              formControlName="imagePath"
             />
           </div>
         </div>
@@ -54,27 +61,23 @@
         </div>
       </div>
 
-      <div class="row" style="margin-top: 15px;">
-        <div class="col-xs-12" formArrayName = "ingredients" >
-          <div  
-          class="row"
-          style="margin-top: 10px;"
-          *ngFor="let ingredient of ingredientsForm; let i = index;"
-          [formGroupName] = "i"
+      <div class="row" style="margin-top: 15px">
+        <div class="col-xs-12" formArrayName="ingredients">
+          <div
+            class="row"
+            style="margin-top: 10px"
+            *ngFor="let ingredient of ingredientsForm; let i = index"
+            [formGroupName]="i"
           >
             <div class="col-xs-8">
-              <input 
-              type="text" 
-              formControlName="name" 
-              class="form-control"
-              >
+              <input type="text" formControlName="name" class="form-control" />
             </div>
             <div class="col-xs-2">
-              <input 
-              type="number" 
-              class="form-control"
-              formControlName="amount"
-              >
+              <input
+                type="number"
+                class="form-control"
+                formControlName="amount"
+              />
             </div>
             <div class="col-xs-2">
               <button class="btn btn-danger">X</button>
@@ -83,8 +86,14 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-xs-12" style="margin-top: 7px;">
-          <button type="button" class="btn btn-primary" (click)="onAddIngredient()">Add ingredient</button>
+        <div class="col-xs-12" style="margin-top: 7px">
+          <button
+            type="button"
+            class="btn btn-primary"
+            (click)="onAddIngredient()"
+          >
+            Add ingredient
+          </button>
         </div>
       </div>
     </form>
