--- a/src/app/recipes/recipe-new/recipe-new.component.html
+++ b/src/app/recipes/recipe-new/recipe-new.component.html
@@ -1,6 +1,6 @@
 <div class="row mt-4">
   <div class="col-xs-12" style="margin-bottom: 5rem">
-    <form [formGroup]="recipeForm">
+    <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
       <div class="col-xs-12">
         <div class="formg-group">
           <button
