--- a/src/app/recipes/recipe-new/recipe-new.component.html
+++ b/src/app/recipes/recipe-new/recipe-new.component.html
@@ -5,7 +5,7 @@
         <div class="formg-group">
           <button
           style="margin-right: 10px;"
-            [disabled]="!recipeForm.valid"
+            [disabled]="!recipeForm?.valid"
             type="submit"
             class="btn btn-success"
           >
