--- a/src/app/recipes/recipe-new/recipe-new.component.html
+++ b/src/app/recipes/recipe-new/recipe-new.component.html
@@ -40,13 +40,14 @@
               type="text"
               class="form-control"
               formControlName="imagePath"
+              #imagePath
             />
           </div>
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12">
-          <img src="" alt="chosen image" class="img-responsive" />
+          <img  width="350px" [src]="imagePath.value" alt="chosen image" class="img-responsive" />
         </div>
       </div>
       <div class="row">
