--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -22,7 +22,7 @@
           </a>
           <ul class="dropdown-menu">
             <li><a  (click)="onSave()" style="cursor: pointer;">Save Data</a></li>
-            <li><a (click)="onFetch()" style="cursor: pointer;">Fetch Data</a></li>
+            <li><a type="button" (click)="onFetch()" style="cursor: pointer;">Fetch Data</a></li>
           </ul>
         </li>
       </ul>
