--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -25,6 +25,7 @@
         <li style="cursor: pointer;" (click)="onToShoppingList(recipe.ingredients)" ><a >To Shopping List</a></li>
         <li style="cursor: pointer;" ><a (click)="onEditRecipe()" >Edit Recipe</a></li>
         <li style="cursor: pointer;" ><a (click)="onDeleteRecipe()">Delete Recipe</a></li>
+        <li style="cursor: pointer;" ><a (click)="onFetchRecipe()">Fetch Recipe</a></li>
       </ul>
     </div>
   </div>
