continued to try out things

--- a/src/app/recipes/recipe-new/recipe-new.component.html
+++ b/src/app/recipes/recipe-new/recipe-new.component.html
@@ -104,6 +104,7 @@
           >
             Add ingredient
           </button>
+          <button type="button" (click)="onCheckFetch()" >Check fetch</button>
         </div>
       </div>
     </form>
