--- a/src/app/shopping-list/shoping-edit/shoping-edit.component.html
+++ b/src/app/shopping-list/shoping-edit/shoping-edit.component.html
@@ -31,6 +31,7 @@
           <button [disabled]='!f.valid' class="btn btn-success" type="submit">{{ editMode ? "Update": "Add"}}</button>
           <button class="btn btn-primary" type="button" (click)="onClear()" >Clear</button>
           <button *ngIf="editMode" class="btn btn-danger" type="button" (click)="onDelete()" >Delete</button>
+          <button type="button" (click)="testSome()">Test some</button>
         </div>
       </div>
     </form>
