things are working out well now

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -23,6 +23,7 @@
           <ul class="dropdown-menu">
             <li><a  (click)="onSave()" style="cursor: pointer;">Save Data</a></li>
             <li><a type="button" (click)="onFetch()" style="cursor: pointer;">Fetch Data</a></li>
+            <li><a type="button" (click)="onChangeLife()" style="cursor: pointer;">Change life Data</a></li>
           </ul>
         </li>
       </ul>
